[gd_scene load_steps=21 format=3 uid="uid://bjriqhjk3tc8f"]

[ext_resource type="Script" path="res://scenes/game_object/dice/dice.gd" id="1_wqcu2"]
[ext_resource type="Texture2D" uid="uid://bf5vvdsj8708m" path="res://scenes/game_object/dice/diceSelectedAll.png" id="2_japqq"]
[ext_resource type="Texture2D" uid="uid://cpop2g363r0nm" path="res://scenes/game_object/dice/diceAll.png" id="2_os4tc"]

[sub_resource type="Animation" id="Animation_ans1t"]
resource_name = "roll"
length = 0.3
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DiceSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_i2kxo"]
resource_name = "stop"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DiceSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6obd5"]
_data = {
"roll": SubResource("Animation_ans1t"),
"stop": SubResource("Animation_i2kxo")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_pc11o"]
atlas = ExtResource("2_japqq")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uugad"]
atlas = ExtResource("2_japqq")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucjq3"]
atlas = ExtResource("2_japqq")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_k88m2"]
atlas = ExtResource("2_japqq")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrlbp"]
atlas = ExtResource("2_japqq")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggkb1"]
atlas = ExtResource("2_japqq")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6onff"]
atlas = ExtResource("2_os4tc")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3byn2"]
atlas = ExtResource("2_os4tc")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnsdq"]
atlas = ExtResource("2_os4tc")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6icv5"]
atlas = ExtResource("2_os4tc")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_n560y"]
atlas = ExtResource("2_os4tc")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jiivw"]
atlas = ExtResource("2_os4tc")
region = Rect2(480, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_cg7gv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc11o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc11o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uugad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucjq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k88m2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrlbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggkb1")
}],
"loop": true,
"name": &"selected",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6onff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6onff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3byn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnsdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6icv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n560y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jiivw")
}],
"loop": true,
"name": &"stop",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_udu43"]
size = Vector2(75, 75)

[node name="Dice" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_wqcu2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6obd5")
}

[node name="DiceRollTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DiceRollGapTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="DiceSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cg7gv")
animation = &"stop"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_udu43")
